Fixed the vertical alignment issue by setting 100vw on body in CSS. Updated README.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Kumbh Sans', sans-serif;
   margin: 0 auto;
+  width: 100vw;
 }
                               /* WEATHER TODAY STARTS HERE */
 .wrapper {
